[project]
name = "klingo"
version = "0.1.6"
description = "A minimal framework for creating parameterized airfoil geometries."
authors = [
    { name = "Gabriel B. Santos", email = "gabriel.bertacco@unesp.br" }
]
dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "numpy-stl>=3.1.2",
]
readme = "README.md"
requires-python = ">=3.8"
packages = [
  {include = "klingo"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["klingo"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401"]
